# ArgParser

./: .gitignore  CMakeLists.txt  README.md
lib/: ArgParser.cpp  ArgParser.h  Argument.cpp  Argument.h  CMakeLists.txt  FlagArgument.cpp  FlagArgument.h  IntArgument.cpp  IntArgument.h  StringArgument.cpp  StringArgument.h
tests/: argparser_test.cpp
